--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,40 @@
-.App {
-  text-align: center;
+.App{
+    text-align: center;
+    display: flex;
+    min-height: 100vh;
+    align-items: center;
+    justify-content: center;
+    background-image: linear-gradient(79deg,#c73e65,#a525a5 48%,#0f80dd);
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.auth-form-container, .login-form, .register-form{
+    display: flex;
+    flex-direction: column;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.auth-form-container{
+    padding: 5rem;
+    border: 1px solid white;
+    border-radius: 10px;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+label{
+    text-align: left;
+    padding: 0.25rem 0;
+    color: #ebf6ff;
 }
-
-.App-link {
-  color: #61dafb;
+input{
+    margin: 0.5rem 0;
+    padding: 1rem ;
+    border: none;
+    border-radius: 10px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button{
+    border: none;
+    background-color: #ebf6ff;
+    padding: 20px;
+    border-radius: 10px;
+    cursor: pointer;
+}
+.link-btn{
+    background: none;
+    color:#ebf6ff;
+    text-decoration: underline;
 }
