--- a/src/components/HeroStyle.css
+++ b/src/components/HeroStyle.css
@@ -240,7 +240,7 @@ article.nextSlide {
     color: aliceblue;
 }
 .white1{
-    padding-top: 160px;
+    padding-top: 70px;
     color: aliceblue;
 }
 .desc{
@@ -385,3 +385,10 @@ color:#f6f3f4;
 .button-home{
 align-items: left;
 }
+.grid{
+    display: grid;
+    grid-template-columns: repeat(3,275px);
+    grid-gap: 40px;
+    padding-left: 500px;
+}
+
