--- a/src/App.css
+++ b/src/App.css
@@ -78,3 +78,20 @@ cursor: pointer;
 box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
 border-radius: var(--radius);
 border-color: transparent;}
+.btnleft {
+    text-transform: uppercase;
+    text-align: left;
+    background: var(--clr-primary-5);
+    color: var(--clr-primary-10);
+    padding: 0.375rem 0.75rem;
+    letter-spacing: var(--spacing);
+    display: inline-block;
+    font-weight: 400;
+    transition: var(--transition);
+    font-size: 0.875rem;
+    cursor: pointer;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
+    border-radius: var(--radius);
+    border-color: transparent;
+    align-items: center;
+}
